java/java-tests/testData/codeInsight/multipleJdks/java7/p/SuperclassImplementsGenericsOfUnknownType.java
package p;
<error descr="Cannot access java.util.stream.Stream">abstract class B extends A</error>{}